main.tf
resource "aws_vpc" "vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    "Name" = "vpc"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    "Name" = "igw"
  }
}

resource "aws_subnet" "public_subnet_1" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true
  tags = {
    "Name" = "public_subnet_1"
  }
}

resource "aws_subnet" "public_subnet_2" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = true
  tags = {
    "Name" = "public_subnet_2"
  }
}

resource "aws_subnet" "private_subnet_1" {
  vpc_id            = aws_vpc.vpc.id
  cidr_block        = "10.0.3.0/24"
  availability_zone = "us-east-1a"
  tags = {
    "Name" = "private_subnet_1"
  }
}

resource "aws_subnet" "private_subnet_2" {
  vpc_id            = aws_vpc.vpc.id
  cidr_block        = "10.0.4.0/24"
  availability_zone = "us-east-1b"
  tags = {
    "Name" = "private_subnet_2"
  }
}

resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
  tags = {
    "Name" = "public_rt"
  }
}

resource "aws_route_table_association" "public_rt_assoc_1" {
  subnet_id      = aws_subnet.public_subnet_1.id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_route_table_association" "public_rt_assoc_2" {
  subnet_id      = aws_subnet.public_subnet_2.id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_eip" "nat_eip" {
  domain = "vpc"
}

resource "aws_nat_gateway" "nat_gw" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.public_subnet_1.id
  tags = {
    "Name" = "nat_gw"
  }
}

resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.vpc.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat_gw.id
  }
  tags = {
    "Name" = "private_rt"
  }
}

resource "aws_route_table_association" "private_rt_assoc_1" {
  subnet_id      = aws_subnet.private_subnet_1.id
  route_table_id = aws_route_table.private_rt.id
}

resource "aws_route_table_association" "private_rt_assoc_2" {
  subnet_id      = aws_subnet.private_subnet_2.id
  route_table_id = aws_route_table.private_rt.id
}

resource "aws_security_group" "nginx_sg" {
  name        = "nginx-sg"
  description = "Allow HTTP and SSH"
  vpc_id      = aws_vpc.vpc.id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    "Name" = "nginx-sg"
  }
}

resource "aws_launch_template" "nginx_lt" {
  name                    = "nginx-lt"
  image_id                = "ami-04b4f1a9cf54c11d0"
  instance_type           = "t3.small"
  disable_api_stop        = true
  disable_api_termination = true
  user_data               = filebase64("install.sh")
  vpc_security_group_ids  = [aws_security_group.nginx_sg.id]
  tags = {
    "Name" = "nginx-lt"
  }
}

resource "aws_autoscaling_group" "nginx_asg" {
  name = "nginx-asg"
  launch_template {
    name = aws_launch_template.nginx_lt.name
  }
  min_size            = 2
  max_size            = 2
  desired_capacity    = 2
  vpc_zone_identifier = [aws_subnet.public_subnet_1.id, aws_subnet.public_subnet_2.id]
  tag {
    key                 = "Name"
    value               = "nginx-asg"
    propagate_at_launch = true
  }
}

resource "aws_lb" "nginx_lb" {
  name                       = "nginx-lb"
  internal                   = false
  load_balancer_type         = "application"
  security_groups            = [aws_security_group.nginx_sg.id]
  subnets                    = [aws_subnet.public_subnet_1.id, aws_subnet.public_subnet_2.id]
  enable_deletion_protection = false

  tags = {
    "Name" = "nginx-lb"
  }
}

resource "aws_lb_target_group" "nginx_tg" {
  name                              = "nginx-tg"
  vpc_id                            = aws_vpc.vpc.id
  target_type                       = "instance"
  port                              = 80
  protocol                          = "HTTP"
  protocol_version                  = "HTTP1"
  deregistration_delay              = 300
  load_balancing_algorithm_type     = "round_robin"
  load_balancing_cross_zone_enabled = "use_load_balancer_configuration"
  slow_start                        = "0"
  health_check {
    enabled             = true
    interval            = 30
    path                = "/"
    port                = "traffic-port"
    timeout             = 5
    healthy_threshold   = 5
    unhealthy_threshold = 2
    matcher             = "200"
  }
  tags = {
    "Name" = "nginx-tg"
  }
}

resource "aws_lb_listener" "nginx_listener" {
  load_balancer_arn = aws_lb.nginx_lb.arn
  port              = "80"
  protocol          = "HTTP"
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.nginx_tg.arn
  }
  tags = {
    "Name" = "nginx-listener"
  }
}

resource "aws_autoscaling_attachment" "asg_attachment" {
  autoscaling_group_name = aws_autoscaling_group.nginx_asg.name
  lb_target_group_arn    = aws_lb_target_group.nginx_tg.arn
}

resource "aws_launch_template" "private_lt" {
  name                    = "private-lt"
  image_id                = "ami-04b4f1a9cf54c11d0"
  instance_type           = "t3.small"
  disable_api_stop        = true
  disable_api_termination = true
  user_data               = filebase64("install.sh")
  vpc_security_group_ids  = [aws_security_group.nginx_sg.id]
  tags = {
    "Name" = "private-lt"
  }
}

resource "aws_autoscaling_group" "private_asg" {
  name = "private-asg"
  launch_template {
    name = aws_launch_template.private_lt.name
  }
  min_size            = 2
  max_size            = 2
  desired_capacity    = 2
  vpc_zone_identifier = [aws_subnet.private_subnet_1.id, aws_subnet.private_subnet_2.id]
  tag {
    key                 = "Name"
    value               = "private-asg"
    propagate_at_launch = true
  }
}

resource "aws_lb" "private_lb" {
  name                       = "private-lb"
  internal                   = true
  load_balancer_type         = "application"
  security_groups            = [aws_security_group.nginx_sg.id]
  subnets                    = [aws_subnet.private_subnet_1.id, aws_subnet.private_subnet_2.id]
  enable_deletion_protection = false

  tags = {
    "Name" = "private-lb"
  }
}

resource "aws_lb_target_group" "private_tg" {
  name                              = "private-tg"
  vpc_id                            = aws_vpc.vpc.id
  target_type                       = "instance"
  port                              = 80
  protocol                          = "HTTP"
  protocol_version                  = "HTTP1"
  deregistration_delay              = 300
  load_balancing_algorithm_type     = "round_robin"
  load_balancing_cross_zone_enabled = "use_load_balancer_configuration"
  slow_start                        = "0"
  health_check {
    enabled             = true
    interval            = 30
    path                = "/"
    port                = "traffic-port"
    timeout             = 5
    healthy_threshold   = 5
    unhealthy_threshold = 2
    matcher             = "200"
  }
  tags = {
    "Name" = "private-tg"
  }
}

resource "aws_lb_listener" "private_listener" {
  load_balancer_arn = aws_lb.private_lb.arn
  port              = "80"
  protocol          = "HTTP"
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.private_tg.arn
  }
  tags = {
    "Name" = "private-listener"
  }
}

resource "aws_autoscaling_attachment" "private_asg_attachment" {
  autoscaling_group_name = aws_autoscaling_group.private_asg.name
  lb_target_group_arn    = aws_lb_target_group.private_tg.arn
}

resource "aws_db_instance" "primary_postgres" {
  allocated_storage          = 20
  identifier                 = "primary-postgres"
  storage_type               = "gp3"
  engine                     = "postgres"
  engine_version             = "17.2"
  instance_class             = "db.t3.medium"
  db_name                    = "primarydb"
  username                   = "db_user"
  password                   = "db_password"
  publicly_accessible        = false
  skip_final_snapshot        = true
  apply_immediately          = true
  auto_minor_version_upgrade = true
  deletion_protection        = false
  multi_az                   = false
  port                       = 5432
  backup_retention_period    = 7
  vpc_security_group_ids     = [aws_security_group.nginx_sg.id]
  db_subnet_group_name       = aws_db_subnet_group.primary_db_subnet_group.name
  availability_zone          = "us-east-1a"
  tags = {
    "Name" = "primary-postgres"
  }
}

resource "aws_db_instance" "backup_postgres" {
  identifier                 = "backup-postgres"
  storage_type               = "gp3"
  engine                     = "postgres"
  engine_version             = "17.2"
  instance_class             = "db.t3.medium"
  publicly_accessible        = false
  skip_final_snapshot        = true
  apply_immediately          = true
  auto_minor_version_upgrade = true
  deletion_protection        = false
  multi_az                   = false
  port                       = 5432
  vpc_security_group_ids     = [aws_security_group.nginx_sg.id]
  db_subnet_group_name       = aws_db_subnet_group.primary_db_subnet_group.name
  replicate_source_db        = aws_db_instance.primary_postgres.arn
  availability_zone          = "us-east-1b"
  tags = {
    "Name" = "backup-postgres"
  }
}

resource "aws_db_subnet_group" "primary_db_subnet_group" {
  name       = "primary-db-subnet-group"
  subnet_ids = [aws_subnet.private_subnet_1.id, aws_subnet.private_subnet_2.id]
  tags = {
    "Name" = "primary-db-subnet-group"
  }
}
